WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146969
[Mac] AirPlay route is not always set automatically
https://bugs.webkit.org/show_bug.cgi?id=146969
Summary
[Mac] AirPlay route is not always set automatically
Eric Carlson
Reported
2015-07-15 12:31:54 PDT
An active AirPlay route is forgotten when the last <video> element is deleted.
Attachments
Proposed patch
(6.64 KB, patch)
2015-07-15 12:57 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-07-15 12:32:58 PDT
<
rdar://problem/21840147
>
Eric Carlson
Comment 2
2015-07-15 12:57:26 PDT
Created
attachment 256852
[details]
Proposed patch
Jer Noble
Comment 3
2015-07-15 13:24:08 PDT
Comment on
attachment 256852
[details]
Proposed patch r=me
WebKit Commit Bot
Comment 4
2015-07-15 13:51:01 PDT
Comment on
attachment 256852
[details]
Proposed patch Clearing flags on attachment: 256852 Committed
r186854
: <
http://trac.webkit.org/changeset/186854
>
WebKit Commit Bot
Comment 5
2015-07-15 13:51:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug