[Mac] AirPlay route is not always set automatically https://bugs.webkit.org/show_bug.cgi?id=146969

Reviewed by Jer Noble.

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::configurePlaybackTargetClients): Return early if there are
  no clients. Make the first client in the vector automatically play to the target if there
  is no other match and there is an active route.
(WebCore::WebMediaSessionManager::watchdogTimerFired): Call picker.invalidatePlaybackTargets,
  not stopMonitoringPlaybackTargets.

* platform/graphics/MediaPlaybackTargetPicker.cpp:
(WebCore::MediaPlaybackTargetPicker::invalidatePlaybackTargets): New.
* platform/graphics/MediaPlaybackTargetPicker.h:

* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.h:
* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:
(WebCore::MediaPlaybackTargetPickerMac::stopMonitoringPlaybackTargets): Do nothing, AirPlay
  automatically stops monitoring when appropriate and release the picker also releases
  the output context, which drops the route.
(WebCore::MediaPlaybackTargetPickerMac::invalidatePlaybackTargets): New.


Canonical link: https://commits.webkit.org/165029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186854 268f45cc-cd09-0410-ab3c-d52691b4dbfc